# constr

./: .env.example  README.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  requirements.txt  vite.config.ts  vite.config.ts.timestamp-1756058753802-d508705c7d556.mjs  vite.config.ts.timestamp-1756848563379-586825c730a7f.mjs
alembic/: env.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/models/: __init__.py  audit_log.py  contact.py  corporate_developer.py  developer.py  document.py  employee.py  inventory.py  land.py  lead.py  pending_action.py  project.py  user.py
app/schemas/: __init__.py  contact.py  developer.py  employee.py  inventory.py  land.py  lead.py  pending_action.py  project.py  user.py
app/services/: approval_service.py  csv_service.py  file_upload.py
app/utils/: logging.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  deps.py  main.py  models.py  security.py
backend/app/clients/: d1_client.py  r2_client.py
backend/app/routers/: auth.py  contacts.py  developers.py  documents.py  inventory.py  land.py  leads.py  pending_actions.py  projects.py  users.py
backend/app/schemas/: auth.py  documents.py  leads.py  pending_actions.py  users.py
backend/app/services/: approvals.py  csv_io.py  file_storage.py
backend/app/utils/: errors.py  ids.py  logging.py
cloudflare-worker/: README.md  package.json  wrangler.toml
scripts/: init_db.py  seed_users.py
src/: App.tsx
(+40 files in other folders)
